# winspace

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml  spec.md
.github/workflows/: ci.yml
packaging/: build-release.ps1  winspace.spec
packaging/marketing/: build_marketing.py  xianyu-listing.md
packaging/portable/: README.txt
src/winspace/: __init__.py  __main__.py  cli.py  version.py
src/winspace/core/: __init__.py  errors.py  fs.py  junction.py  manifest.py  mover.py  safety.py  scanner.py  verify.py
src/winspace/detectors/: __init__.py  base.py  browser_cache.py  cloud_sync.py  im_data.py  node_modules.py  package_caches.py
src/winspace/gui/: __init__.py  app.py  candidate_model.py  main_window.py  workers.py
tests/: conftest.py  test_smoke.py
tests/integration/: test_cli.py  test_gui_smoke.py  test_never_cascade.py  test_roundtrip_node_modules.py  test_roundtrip_safe_trio.py
tests/unit/: test_fs.py  test_junction.py  test_manifest.py  test_mover.py  test_safety.py  test_scanner.py  test_verify.py
tests/unit/test_detectors/: test_base.py  test_browser_cache.py  test_cloud_sync.py  test_im_data.py  test_node_modules.py  test_package_caches.py
